v3.2

* Added willy's trusted server (abe.peercoinexplorer.net)
* Updated DNS seeds
* Updated logo
* Using peercoinj 0.13.1

v3.1

* Fixed bug relating to restoring wallets

v3.0

* Using peercoinj 0.13.0
* Shapeshift API integration. This enables seamless payments in supported foreign coin addresses and URIs
from within the App without the use of external plugins by either merchant or customer.
* Transactions can be exported to csv files by the "Export" menu option.
* Users can now configure trusted servers to download valid block hashes from, in a priority list.
* Fast DNS peer discovery
* Many bugfixes and enhancements

v2.6

* Bugfix

v2.5

* Went through all code and made several fixes to startup code

v2.4

* Another startup fix

v2.3

* Use peercoinj 0.12.3, fix loading crash, and remove redundant dust message.

v2.0

* Update in line with peercoinj 0.12.2 and with version 4.13 of Andreas Schildbach's Bitcoin Android wallet
