@@ -1,96 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-	package="com.matthewmitchell.peercoin_android_wallet"
-	android:installLocation="internalOnly"
-	android:versionCode="12"
-	android:versionName="3.2" >
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.matthewmitchell.peercoin_android_wallet"
+    android:installLocation="internalOnly"
+    android:versionCode="12"
+    android:versionName="3.2" >
 
-	<uses-sdk
-		android:minSdkVersion="15"
-		android:targetSdkVersion="16"
-		tools:ignore="OldTargetApi" />
+    <uses-sdk
+        android:minSdkVersion="15"
+        android:targetSdkVersion="16"
+        tools:ignore="OldTargetApi" />
 
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-	<uses-permission android:name="android.permission.NFC" />
-	<uses-permission android:name="android.permission.CAMERA" />
-	<uses-permission android:name="android.permission.VIBRATE" />
-	<uses-permission android:name="android.permission.WAKE_LOCK" />
-	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-	<uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.NFC" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
 
-	<uses-feature
-		android:name="android.hardware.touchscreen"
-		android:required="false" />
-	<uses-feature
-		android:name="android.hardware.nfc"
-		android:required="false" />
-	<uses-feature
-		android:name="android.hardware.camera"
-		android:required="false" />
-	<uses-feature
-		android:name="android.hardware.camera.front"
-		android:required="false" />
-	<uses-feature
-		android:name="android.hardware.camera.autofocus"
-		android:required="false" />
-	<uses-feature
-		android:name="android.hardware.camera.flash"
-		android:required="false" />
-	<uses-feature
-		android:name="android.hardware.screen.landscape"
-		android:required="false" />
-	<uses-feature
-		android:name="android.hardware.bluetooth"
-		android:required="false" />
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.nfc"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.front"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.flash"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.screen.landscape"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.bluetooth"
+        android:required="false" />
 
-	<supports-screens
-		android:anyDensity="true"
-		android:largeScreens="true"
-		android:normalScreens="true"
-		android:smallScreens="true"
-		android:xlargeScreens="true" />
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
 
-	<application
-		android:name="com.matthewmitchell.peercoin_android_wallet.WalletApplication"
-		android:allowBackup="false"
-		android:icon="@drawable/app_icon"
-		android:label="@string/app_name"
-		android:theme="@style/My.Theme">
-		<activity
-			android:name="com.matthewmitchell.peercoin_android_wallet.ui.WalletActivity"
-			android:configChanges="keyboard|keyboardHidden"
-			android:launchMode="singleTask" />
+    <application
+        android:name="com.matthewmitchell.peercoin_android_wallet.WalletApplication"
+        android:allowBackup="false"
+        android:icon="@drawable/app_icon"
+        android:label="@string/app_name"
+        android:theme="@style/My.Theme">
+        <activity
+            android:name="com.matthewmitchell.peercoin_android_wallet.ui.WalletActivity"
+            android:configChanges="keyboard|keyboardHidden"
+            android:launchMode="singleTask" />
 
-		<activity-alias
-			android:name="com.matthewmitchell.peercoin_android_wallet.WalletActivity"
-			android:targetActivity="com.matthewmitchell.peercoin_android_wallet.ui.WalletActivity" >
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
+        <activity-alias
+            android:name="com.matthewmitchell.peercoin_android_wallet.WalletActivity"
+            android:targetActivity="com.matthewmitchell.peercoin_android_wallet.ui.WalletActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-			<intent-filter>
-				<action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
 
-				<data android:mimeType="application/x-ppctx" />
+                <data android:mimeType="application/x-ppctx" />
 
-				<category android:name="android.intent.category.DEFAULT" />
-			</intent-filter>
-		</activity-alias>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity-alias>
 
-		<activity
-			android:name="com.matthewmitchell.peercoin_android_wallet.ui.send.SendCoinsActivity"
-			android:configChanges="keyboard|keyboardHidden"
-			android:label="@string/send_coins_activity_title"
-			android:screenOrientation="behind"
-			android:windowSoftInputMode="adjustResize" >
-			<intent-filter android:label="@string/send_coins_activity_title" >
-				<action android:name="android.intent.action.VIEW" />
+        <activity
+            android:name="com.matthewmitchell.peercoin_android_wallet.ui.send.SendCoinsActivity"
+            android:configChanges="keyboard|keyboardHidden"
+            android:label="@string/send_coins_activity_title"
+            android:screenOrientation="behind"
+            android:windowSoftInputMode="adjustResize" >
+            <intent-filter android:label="@string/send_coins_activity_title" >
+                <action android:name="android.intent.action.VIEW" />
 
-				<data android:scheme="ppcoin" />
+                <data android:scheme="ppcoin" />
+                <data android:scheme="peercoin" />
 
                 <!-- SHAPESHIFT URIS -->
                 <data android:scheme="bitcoin" />
@@ -121,139 +122,140 @@
                 <data android:scheme="unobtainium" />
                 <data android:scheme="vericoin" />
 
-				<category android:name="android.intent.category.DEFAULT" />
-				<category android:name="android.intent.category.BROWSABLE" />
-			</intent-filter>
-			<intent-filter android:label="@string/send_coins_activity_title" >
-				<action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+            </intent-filter>
+            <intent-filter android:label="@string/send_coins_activity_title" >
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
 
-				<data android:scheme="ppcoin" />
+                <data android:scheme="ppcoin" />
+                <data android:scheme="peercoin" />
 
-				<category android:name="android.intent.category.DEFAULT" />
-			</intent-filter>
-			<intent-filter android:label="@string/send_coins_activity_title" >
-				<action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter android:label="@string/send_coins_activity_title" >
+                <action android:name="android.intent.action.VIEW" />
 
-				<data android:mimeType="application/peercoin-paymentrequest" />
+                <data android:mimeType="application/peercoin-paymentrequest" />
 
-				<category android:name="android.intent.category.DEFAULT" />
-			</intent-filter>
-			<intent-filter android:label="@string/send_coins_activity_title" >
-				<action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter android:label="@string/send_coins_activity_title" >
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
 
-				<data android:mimeType="application/peercoin-paymentrequest" />
+                <data android:mimeType="application/peercoin-paymentrequest" />
 
-				<category android:name="android.intent.category.DEFAULT" />
-			</intent-filter>
-		</activity>
-		<activity
-			android:name="com.matthewmitchell.peercoin_android_wallet.ui.SendCoinsQrActivity"
-			android:configChanges="keyboard|keyboardHidden"
-			android:theme="@android:style/Theme.Translucent.NoTitleBar" >
-		</activity>
-		<activity
-			android:name="com.matthewmitchell.peercoin_android_wallet.ui.RequestCoinsActivity"
-			android:configChanges="keyboard|keyboardHidden"
-			android:label="@string/request_coins_activity_title"
-			android:screenOrientation="behind"
-			android:windowSoftInputMode="adjustResize" />
-		<activity
-			android:name="com.matthewmitchell.peercoin_android_wallet.ui.AddressBookActivity"
-			android:configChanges="keyboard|keyboardHidden"
-			android:label="@string/address_book_activity_title"
-			android:screenOrientation="behind" />
-		<activity
-			android:name="com.matthewmitchell.peercoin_android_wallet.ui.ExchangeRatesActivity"
-			android:configChanges="keyboard|keyboardHidden"
-			android:label="@string/exchange_rates_activity_title"
-			android:screenOrientation="behind" />
-		<activity
-			android:name="com.matthewmitchell.peercoin_android_wallet.ui.NetworkMonitorActivity"
-			android:configChanges="keyboard|keyboardHidden"
-			android:label="@string/network_monitor_activity_title"
-			android:screenOrientation="behind" />
-		<activity
-			android:name="com.matthewmitchell.peercoin_android_wallet.ui.preference.PreferenceActivity"
-			android:label="@string/preferences_activity_title"
-			android:screenOrientation="behind" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.matthewmitchell.peercoin_android_wallet.ui.SendCoinsQrActivity"
+            android:configChanges="keyboard|keyboardHidden"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+        </activity>
+        <activity
+            android:name="com.matthewmitchell.peercoin_android_wallet.ui.RequestCoinsActivity"
+            android:configChanges="keyboard|keyboardHidden"
+            android:label="@string/request_coins_activity_title"
+            android:screenOrientation="behind"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name="com.matthewmitchell.peercoin_android_wallet.ui.AddressBookActivity"
+            android:configChanges="keyboard|keyboardHidden"
+            android:label="@string/address_book_activity_title"
+            android:screenOrientation="behind" />
+        <activity
+            android:name="com.matthewmitchell.peercoin_android_wallet.ui.ExchangeRatesActivity"
+            android:configChanges="keyboard|keyboardHidden"
+            android:label="@string/exchange_rates_activity_title"
+            android:screenOrientation="behind" />
+        <activity
+            android:name="com.matthewmitchell.peercoin_android_wallet.ui.NetworkMonitorActivity"
+            android:configChanges="keyboard|keyboardHidden"
+            android:label="@string/network_monitor_activity_title"
+            android:screenOrientation="behind" />
+        <activity
+            android:name="com.matthewmitchell.peercoin_android_wallet.ui.preference.PreferenceActivity"
+            android:label="@string/preferences_activity_title"
+            android:screenOrientation="behind" />
         <activity
             android:name="com.matthewmitchell.peercoin_android_wallet.ui.preference.TrustedServersActivity"
             android:label="@string/preferences_category_trusted_servers"
             android:screenOrientation="behind" />
-		<activity
-			android:name="com.matthewmitchell.peercoin_android_wallet.ui.RestoreWalletActivity"
-			android:configChanges="orientation|keyboard|keyboardHidden"
-			android:theme="@style/My.Theme.Dialog"
-			android:finishOnTaskLaunch="true"
-			android:taskAffinity="com.matthewmitchell.peercoin_android_wallet.ui.RestoreWalletActivity"
-			android:excludeFromRecents="true" >
-			<intent-filter android:label="@string/import_keys_intent_filter_action" >
-				<action android:name="android.intent.action.VIEW" />
+        <activity
+            android:name="com.matthewmitchell.peercoin_android_wallet.ui.RestoreWalletActivity"
+            android:configChanges="orientation|keyboard|keyboardHidden"
+            android:theme="@style/My.Theme.Dialog"
+            android:finishOnTaskLaunch="true"
+            android:taskAffinity="com.matthewmitchell.peercoin_android_wallet.ui.RestoreWalletActivity"
+            android:excludeFromRecents="true" >
+            <intent-filter android:label="@string/import_keys_intent_filter_action" >
+                <action android:name="android.intent.action.VIEW" />
 
-				<category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.DEFAULT" />
 
-				<data android:mimeType="application/x-peercoin-wallet-backup" />
-				<data android:mimeType="application/octet-stream" />
-			</intent-filter>
-		</activity>
-		<activity
-			android:name="com.matthewmitchell.peercoin_android_wallet.ui.ScanActivity"
-			android:configChanges="orientation|keyboard|keyboardHidden"
-			android:screenOrientation="landscape"
-			android:stateNotNeeded="true"
-			android:theme="@style/My.Theme.Fullscreen"
-			android:windowSoftInputMode="stateAlwaysHidden" />
+                <data android:mimeType="application/x-peercoin-wallet-backup" />
+                <data android:mimeType="application/octet-stream" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.matthewmitchell.peercoin_android_wallet.ui.ScanActivity"
+            android:configChanges="orientation|keyboard|keyboardHidden"
+            android:screenOrientation="landscape"
+            android:stateNotNeeded="true"
+            android:theme="@style/My.Theme.Fullscreen"
+            android:windowSoftInputMode="stateAlwaysHidden" />
 
-		<provider
-			android:name="com.matthewmitchell.peercoin_android_wallet.AddressBookProvider"
-			android:authorities="com.matthewmitchell.peercoin_android_wallet.address_book"
-			android:exported="false" />
-		<provider
-			android:name="com.matthewmitchell.peercoin_android_wallet.ExchangeRatesProvider"
-			android:authorities="com.matthewmitchell.peercoin_android_wallet.exchange_rates"
-			android:exported="false" />
-		<provider
-			android:name="com.matthewmitchell.peercoin_android_wallet.FileAttachmentProvider"
-			android:authorities="com.matthewmitchell.peercoin_android_wallet.file_attachment"
-			android:exported="false"
-			android:grantUriPermissions="true" />
+        <provider
+            android:name="com.matthewmitchell.peercoin_android_wallet.AddressBookProvider"
+            android:authorities="com.matthewmitchell.peercoin_android_wallet.address_book"
+            android:exported="false" />
+        <provider
+            android:name="com.matthewmitchell.peercoin_android_wallet.ExchangeRatesProvider"
+            android:authorities="com.matthewmitchell.peercoin_android_wallet.exchange_rates"
+            android:exported="false" />
+        <provider
+            android:name="com.matthewmitchell.peercoin_android_wallet.FileAttachmentProvider"
+            android:authorities="com.matthewmitchell.peercoin_android_wallet.file_attachment"
+            android:exported="false"
+            android:grantUriPermissions="true" />
 
-		<receiver
-			android:name="com.matthewmitchell.peercoin_android_wallet.WalletBalanceWidgetProvider"
-			android:label="Peercoin Wallet Balance" >
-			<intent-filter>
-				<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-			</intent-filter>
+        <receiver
+            android:name="com.matthewmitchell.peercoin_android_wallet.WalletBalanceWidgetProvider"
+            android:label="Peercoin Wallet Balance" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
 
-			<meta-data
-				android:name="android.appwidget.provider"
-				android:resource="@xml/wallet_balance_widget" />
-		</receiver>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/wallet_balance_widget" />
+        </receiver>
 
-		<service
-			android:name="com.matthewmitchell.peercoin_android_wallet.service.BlockchainServiceImpl"
-			android:exported="false" />
-		<service
-			android:name="com.matthewmitchell.peercoin_android_wallet.offline.AcceptBluetoothService"
-			android:exported="false" />
+        <service
+            android:name="com.matthewmitchell.peercoin_android_wallet.service.BlockchainServiceImpl"
+            android:exported="false" />
+        <service
+            android:name="com.matthewmitchell.peercoin_android_wallet.offline.AcceptBluetoothService"
+            android:exported="false" />
 
-		<receiver android:name="com.matthewmitchell.peercoin_android_wallet.service.AutosyncReceiver" >
-			<intent-filter>
-				<action android:name="android.intent.action.BOOT_COMPLETED" />
-			</intent-filter>
-			<intent-filter>
-				<action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
-			</intent-filter>
-		</receiver>
+        <receiver android:name="com.matthewmitchell.peercoin_android_wallet.service.AutosyncReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
+            </intent-filter>
+        </receiver>
 
-		<service
-			android:name="com.matthewmitchell.peercoin_android_wallet.service.UpgradeWalletService"
-			android:exported="false" />
+        <service
+            android:name="com.matthewmitchell.peercoin_android_wallet.service.UpgradeWalletService"
+            android:exported="false" />
 
-		<meta-data
-			android:name="android.nfc.disable_beam_default"
-			android:value="true" />
+        <meta-data
+            android:name="android.nfc.disable_beam_default"
+            android:value="true" />
 
-	</application>
+    </application>
 
 </manifest>
